Attempting to fix phantomJS functional tests where logo stretches out by setting a limit height to the image

--- a/web-ui/app/scss/styles.scss
+++ b/web-ui/app/scss/styles.scss
@@ -542,6 +542,7 @@ button {
   img {
     padding: 9px 6px 6px 6px;
     width: 163px;
+    height: 59px;
   }
 }
 
